# quoin

./: .gitignore  BBLIB_TODO.md  BUGS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  FIBER_API_DESIGN.md  LICENSE  QUOIN_TODO.md  README.md  STALE_DOCS.md  build.rs  native_rust_state_plan.md  profile_analysis_summary.md
.cargo/: config.toml
.github/workflows/: release.yml  rust.yml
bblib/: 00-bootstrap.b  00-bootstrap.bub  02-iterate.b  02-iterate.bub  03-number_range.b  03-number_range.bub  04-string.b  06-io.b  benchmark.bub  bootstrap.b  case.b  io.b  iterate.b  main.b  main.bub  number_range.b  regex.b  string.b  test.b  test.bub  testmain.b  testmain.bub  testscript.b  testscript.bub
bblib/presentation/: 10-case-statements.b  11-case-statements.b  12-multi-methods-types.b  12-multi-methods-types.bub  13-multi-methods-advanced.b  14-operators.b  15-iterate.b  15-iterate.bub  16-custom-iterate.b  17-custom-collection-init.b  18-string-formatting.b  19-assignment.b  20-method-destructuring.b  21-error-handling.b  21-error-handling.bub  22-stack-traces.b  24-misc-stuff.b  24-misc-stuff.bub  3-basic-syntax.b  4-blocks.b  4-blocks.bub  5-classes-and-methods.b  5-classes-and-methods.bub  6-extensions.b  7-subclasses.b  7-subclasses.bub  8-control-flow.b  9-control-flow.b  9-control-flow.bub
bblib/tests/: 01-iterate.b  01-iterate.bub  02-blocks.b  02-blocks.bub  03-booleans.b  04-operators.b  05-classes.b  05-classes.bub  06-methods.b  06-methods.bub  07-errors.b  07-errors.bub  08-strings.b  09-numbers.b  10-json.b  11-ranges.b  12-case.b  13-fibers.b  13-fibers.bub  14-generators.b  16-symbols.bub  17-can.bub  99-misc.b  99-misc.bub
bench/: CROSS.md  README.md  cross.py  run.py
bench/micro/: block-arith.qn  block-identity.qn  each-arith.qn  each-capture.qn  fused-loop.qn  run.py
bench/py/: btrees.py  combinators.py  fib_typed.py  fib_untyped.py  fib_untyped_32.py  json_bench.py  maps.py  richards.py  sieve.py  strings.py
bench/qn/: btrees.qn  combinators.qn  fib_typed.qn  fib_untyped.qn  fib_untyped_32.qn  json.qn  maps.qn  richards.qn  sieve.qn  strings.qn
bench/rb/: btrees.rb  combinators.rb  fib_typed.rb  fib_untyped.rb  fib_untyped_32.rb  json_bench.rb  maps.rb  richards.rb  sieve.rb  strings.rb
crates/adbc/: Cargo.toml  DESIGN.md
crates/adbc/pkg/: extension.toml
crates/adbc/src/: main.rs  tests.rs
crates/decl-migrate/: Cargo.toml
crates/decl-migrate/src/: main.rs
crates/quoin-ext/: Cargo.toml  README.md
crates/quoin-ext-proto/: Cargo.toml  PROTOCOL.md
crates/quoin-ext-proto/schema/: ext.fbs
crates/quoin-ext-proto/src/: codec.rs  codec_tests.rs  generated.rs  lib.rs  packed.rs
crates/quoin-ext/examples/: Quernfile.qn  greeter.rs
crates/quoin-ext/src/: lib.rs
crates/quoin-ext/tests/: lanes.rs
crates/quoin-fmt/: Cargo.toml  DESIGN.md
crates/quoin-fmt/src/: comments.rs  comments_tests.rs  doc.rs  doc_tests.rs  format.rs  format_tests.rs  lib.rs  verify.rs  verify_tests.rs
crates/quoin-fmt/tests/: corpus.rs
crates/quoin-syntax/: Cargo.toml
crates/quoin-syntax/src/: ast.rs  complete.rs  highlight.rs  interp.rs  interp_tests.rs  lib.rs  pragmas.rs  pragmas_tests.rs  source_info.rs
crates/quoin-syntax/src/pest/: Quoin.pest  parser.rs  parser_tests.rs
crates/quoin-wasm/: Cargo.toml
crates/quoin-wasm/src/: lib.rs
crates/unboxed-proto/: Cargo.toml
crates/unboxed-proto/src/: main.rs
docs/: ALLOC_ARCH.md  AOT_ARCH.md  ASYNC_ARCH.md  BLOCK_AOT_ARCH.md  CONCURRENCY_ARCH.md  DEBUGGER_ARCH.md  DIRECT_CALLS_ARCH.md  DOCS_ARCH.md  ENV_FLAGS.md  EXT_PACKAGING.md  FIBER_API_DESIGN.md  FIBER_REDESIGN.md  FUTURE_ARCH.md  FUTURE_EXT_ARCH.md  GENERICS_ARCH.md  INTROSPECTION.md  LINTER_DESIGN.md  MATERIALIZATION_ARCH.md  OUTCALL_ARCH.md  PERF_ROADMAP.md  README.md  RELEASE_PREP.md  REPL_DESIGN.md  SPECULATIVE_AOT_ARCH.md  STDLIB_DATA_FORMATS.md  STDLIB_NUMBERS.md  STDLIB_TIME.md  TYPED_DEVIRT_ARCH.md  TYPE_SYSTEM_ARCH.md  USE_ARCH.md  WEB_ARCH.md  WINDOW_ARENA_ARCH.md
docs/internal/: ACTOR_OBJECTS.md  ALLOC_ARCH.md  AOT_ARCH.md  ASYNC_ARCH.md  BLOCK_AOT_ARCH.md  CONCURRENCY_ARCH.md  CONCURRENCY_MODEL.md  DEBUGGER_ARCH.md  DIRECT_CALLS_ARCH.md  DOCS_ARCH.md  ENV_FLAGS.md  EXT_PACKAGING.md  FIBER_API_DESIGN.md  FIBER_REDESIGN.md  FUTURE_ARCH.md  FUTURE_EXT_ARCH.md  GENERICS_ARCH.md  INTROSPECTION.md  LINTER_DESIGN.md  MATERIALIZATION_ARCH.md  (+15 more)
lint/no_gc_across_yield/: Cargo.toml
lint/no_gc_across_yield/src/: lib.rs
lint/no_gc_across_yield/ui/: main.rs  main.stderr
playground/: README.md  app.js  index.html  worker.js
profiling/: analyze.py
qnlib/: benchmark.qn  main.qn  main_workers.qn  prelude.qn  test.qn  test_worker.qn  testmain.qn  testscript.qn  warnings.qn
quoin/: Cargo.toml
quoin/src/: lib.rs
scripts/: build-pgo.sh  build_wasm.sh  wasm_examples_check.mjs  wasm_smoke.mjs
src/: ansi_colorizer.rs  assembler.rs  class_table.rs  class_table_tests.rs  clock.rs  compiler.rs  compiler_tests.rs  compute.rs  coverage.rs  coverage_tests.rs  dap.rs  dap_tests.rs  debug.rs  debug_cli.rs  debug_cli_tests.rs  debug_tests.rs  devirt_ops.rs  direct_runner.rs  direct_runner_tests.rs  dispatch.rs  docs.rs  docs_tests.rs  error.rs  fiber.rs  handle_table.rs  handle_table_tests.rs  highlighter.rs  instruction.rs  introspect.rs  io_backend.rs  io_backend_smol.rs  io_backend_smol_tests.rs  io_codecs.rs  lib.rs  main.rs  md_html.rs  md_html_tests.rs  packages.rs  packages_tests.rs  pin_table.rs  (+28 more)
tests/: aot_fibers.rs  aot_task_context.rs  borrow_across_yield.rs  byte_stream.rs  channel_relay.rs  check_json.rs  check_warnings.rs  cli.rs  compute_offload.rs  coverage.rs  direct_calls.rs  doc_gen.rs  exit_code.rs  extension.rs  extension_socket.rs  fiber_ownership.rs  fiber_task_context.rs  file_stream.rs  file_write.rs  fmt.rs  gc_across_yield.rs  gzip_write.rs  http.rs  io_cancel_preserves_handles.rs  io_error.rs  io_stdin.rs  namespaced_types.rs  native_recursion.rs  numpy_ext.rs  os_env.rs  overflow_aot.rs  park_identity.rs  peer_death.rs  pkg_install.rs  pkg_source.rs  placeholders.rs  plan.rs  portable_blocks.rs  process_workers.rs  ps_tree.rs  (+17 more)
(+376 files in other folders)
