[package]
name = "quoin"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "qn"
path = "src/main.rs"

[workspace]
members = [
    ".",
    "crates/quoin-syntax",
    "lint/no_gc_across_yield",
]

[workspace.metadata.dylint]
libraries = [
    { path = "lint/no_gc_across_yield" }
]
[profile.profiling]
inherits = "release"
debug = true

[features]
# mimalloc is the global allocator for optimized builds (release/profiling);
# debug builds fall back to the system allocator via a `debug_assertions` gate
# in main.rs, so malloc-debug tooling keeps working. Disable everywhere with
# `--no-default-features`.
default = ["mimalloc"]
mimalloc = ["dep:mimalloc"]

[dependencies]
quoin-syntax = { path = "crates/quoin-syntax", features = ["gc"] }
gc-arena = "0.6.0"
regex = "1.10"
once_cell = "1.21.4"
substring = "1.4.5"
cargo-llvm-cov = "0.8.7"
glob = "0.3.3"
corosensei = "0.1.4"
async-io = "2"
async-net = "2"
async-fs = "2"
futures-lite = "2"
futures-util = { version = "0.3", default-features = false, features = ["alloc"] }
# TLS: rustls core is sync; futures-rustls drives it on our futures executor. `ring`
# (not the default aws-lc-rs) keeps the build C-toolchain-free and WASM-friendlier.
futures-rustls = { version = "0.26", default-features = false, features = ["ring", "tls12", "logging"] }
webpki-roots = "0.26"
# HTTP/1.1 response-head parsing for the (otherwise pure-Quoin) [HTTP] client. Same
# runtime-independent parser hyper uses; operates on raw socket bytes, no stream layer.
httparse = "1"
console = "0.15"
mimalloc = { version = "0.1", optional = true }
rustc-hash = "2"
# Line editing for `qn repl` (history, multiline via the Validator trait, key bindings).
rustyline = "18"
# Exact base-10 decimal arithmetic backing the BigDecimal stdlib type (money etc.).
rust_decimal = "1"
# Arbitrary-precision integers backing the BigInteger stdlib type.
num-bigint = "0.4"
num-traits = "0.2"

[dev-dependencies]
# Self-signed certs for the local rustls server in the TLS tests. `ring` backend to
# match the runtime and avoid a C toolchain dependency.
rcgen = { version = "0.13", default-features = false, features = ["pem", "ring"] }
# Also a dev-dependency so the `tls_socket` integration test (a separate crate) can use
# the rustls re-export to stand up a local TLS echo server. Cargo unifies this with the
# normal dependency above — no extra build.
futures-rustls = { version = "0.26", default-features = false, features = ["ring", "tls12"] }

