[package]
name = "quoin"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Quoin — a small, object-oriented language in the Smalltalk tradition, on a Rust bytecode VM with a tracing GC and stackful fibers."
readme = "README.md"
keywords = ["language", "smalltalk", "vm", "interpreter", "quoin"]
categories = ["development-tools"]
# `src/bin/ext_echo.rs` (a Tier-1 test-fixture extension) adds a second bin, so name
# the default for a bare `cargo run`.
default-run = "qn"

[[bin]]
name = "qn"
path = "src/main.rs"

[workspace]
members = [
    ".",
    "crates/quoin-syntax",
    "crates/quoin-fmt",
    "crates/quoin-ext",
    "crates/quoin-ext-proto",
    "lint/no_gc_across_yield",
    "lint/no_borrow_across_yield",
]

# Shared across every member so version/licence/links live in one place. The name
# `quoin` is reserved on crates.io by a placeholder crate until this VM is
# published under it. `crates/adbc` is its own workspace and repeats these
# explicitly.
[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/quoin-lang/quoin"
homepage = "https://quoinlang.dev"

[workspace.metadata.dylint]
libraries = [
    { path = "lint/no_gc_across_yield" },
    { path = "lint/no_borrow_across_yield" },
]
# Fat LTO + a single codegen unit let LLVM inline across crate boundaries in the
# dispatch hot path; worth ~double-digit percent on an interpreter this
# dispatch-bound. No `panic = "abort"`: quoin-syntax's resilient parse
# (crates/quoin-syntax/src/complete.rs) relies on catch_unwind.
[profile.release]
lto = "fat"
codegen-units = 1

[profile.profiling]
inherits = "release"
debug = true

[features]
# mimalloc is the global allocator for optimized builds (release/profiling);
# debug builds fall back to the system allocator via a `debug_assertions` gate
# in main.rs, so malloc-debug tooling keeps working. Disable everywhere with
# `--no-default-features`.
default = ["mimalloc"]
mimalloc = ["dep:mimalloc"]

[dependencies]
quoin-syntax = { path = "crates/quoin-syntax", features = ["gc"] }
# The source formatter, driven by the `qn fmt` subcommand.
quoin-fmt = { path = "crates/quoin-fmt" }
# Shared FlatBuffers control-plane schema/codec for the extension protocol — used by the
# host (`Extension` class) to encode requests / decode responses.
quoin-ext-proto = { path = "crates/quoin-ext-proto" }
gc-arena = "0.6.0"
regex = "1.10"
once_cell = "1.21.4"
substring = "1.4.5"
glob = "0.3.3"
futures-lite = "2"
# The compute-offload pool's completion bridge (docs/internal/CONCURRENCY_ARCH.md §4);
# already in-tree transitively via the smol family.
async-channel = "2"
futures-util = { version = "0.3", default-features = false, features = ["alloc"] }
# HTTP/1.1 response-head parsing for the (otherwise pure-Quoin) [HTTP] client. Same
# runtime-independent parser hyper uses; operates on raw socket bytes, no stream layer.
httparse = "1"
# Content-Encoding (de)compression for the [HTTP] client, exposed as Bytes methods.
# gzip + deflate via flate2's miniz_oxide backend (`rust_backend`); zstd *decode* via
# ruzstd. Both pure Rust — no C toolchain dependency, matching the ring/jiff choices.
flate2 = { version = "1", default-features = false, features = ["rust_backend"] }
# Streaming (de)compression over registry streams (io_codecs.rs): drives flate2
# through futures::io::AsyncRead — the trait the stream registry stores.
async-compression = { version = "0.4", default-features = false, features = ["futures-io", "gzip"] }
ruzstd = "0.8"
console = "0.15"
rustc-hash = "2"
# Exact base-10 decimal arithmetic backing the BigDecimal stdlib type (money etc.).
rust_decimal = "1"
# Arbitrary-precision integers backing the BigInteger stdlib type.
num-bigint = "0.4"
num-traits = "0.2"
# Date/time + durations backing the Time stdlib types (jiff: pure-Rust, IANA tzdb, RFC 3339).
jiff = "0.2"
# base64 / hex codecs for the Data formats stdlib.
base64 = "0.22"
hex = "0.4"
# JSON (and the structured Data formats), via serde. `arbitrary_precision` preserves a number's
# raw text so out-of-range values fall back to BigInteger/BigDecimal losslessly; `preserve_order`
# keeps object key order (the Map type is insertion-ordered).
serde_json = { version = "1", features = ["arbitrary_precision", "preserve_order"] }
# Insertion-ordered map backing the Quoin `Map` type (so iteration/serialization preserve order).
indexmap = "2"
# serde core — the `DataValue` bridge hand-implements Serialize/Deserialize for the structured
# formats (MessagePack/TOML/YAML); `derive` is enabled for the DAP message envelopes (`src/dap.rs`).
serde = { version = "1", features = ["derive"] }
# MessagePack (binary) over the DataValue bridge.
rmp-serde = "1"
# TOML config files over the DataValue bridge.
toml = "0.8"
# YAML over the DataValue bridge. serde_yaml is archived; serde_yaml_ng is the maintained fork.
serde_yaml_ng = "0.10"
# CSV (tabular text, RFC 4180). Not a DataValue format — rows of string fields.
csv = "1"
# UUID (v4 random, v7 time-ordered) and ULID identifiers. Both use the OS CSPRNG.
uuid = { version = "1", features = ["v4", "v7"] }
ulid = "1"
# [Crypto]: one-shot digests (+ MD5, kept with the hashes despite not being crypto),
# HMAC, and CSPRNG bytes straight from the OS.
sha1 = "0.10"
sha2 = "0.10"
md-5 = "0.10"
blake3 = "1"
hmac = "0.12"
getrandom = "0.3"
clap = { version = "4.6.1", features = ["derive"] }

# Native-only dependencies. Everything OS-bound lives here so the library also compiles
# for wasm32 (the browser playground): no stack-switching (corosensei), no JIT-able
# memory (cranelift), no reactor/fd polling (the smol family), no terminal, no TLS.
# The wasm build gates the dependent code with `cfg(target_arch = "wasm32")`; see
# `src/lib.rs` and `src/io_backend.rs`.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
# Extension-side SDK (Tier 1). A normal dep so the `ext_echo` test-fixture bin (src/bin/)
# can link it; the VM itself does not use it.
quoin-ext = { path = "crates/quoin-ext" }
cargo-llvm-cov = "0.8.7"
# Stackful coroutines (per-arch assembly): the fiber/scheduler substrate.
corosensei = "0.1.4"
# Unix fd dup/dup2 for the DAP adapter's protocol-stdout redirect (stray prints -> stderr).
libc = "0.2"
async-io = "2"
async-net = "2"
async-fs = "2"
# Subprocess on the same smol reactor: spawn + async piped stdio + async status.
# Child kill-by-pid (kill during a parked wait, reap-on-collect) is libc::kill
# (libc above) — the Child itself is exclusively borrowed by an in-flight wait.
async-process = "2"
# TLS: rustls core is sync; futures-rustls drives it on our futures executor. `ring`
# (not the default aws-lc-rs) keeps the build C-toolchain-free.
futures-rustls = { version = "0.26", default-features = false, features = ["ring", "tls12", "logging"] }
webpki-roots = "0.26"
mimalloc = { version = "0.1", optional = true }
# Line editing for `qn repl` (history, multiline via the Validator trait, key bindings).
rustyline = "18"
cranelift-codegen = "0.133.1"
cranelift-frontend = "0.133.1"
cranelift-jit = "0.133.1"
cranelift-module = "0.133.1"
cranelift-native = "0.133.1"
blocking = "1.6.2"

# wasm32-only: turn on the JS-backed OS-entropy backends for the getrandom in our own
# dependency list (0.3, also reached via ulid→rand) and, via the renamed entry, the 0.4
# that uuid pulls — the rename exists only to unify that feature; nothing imports it.
# getrandom 0.3 additionally needs `--cfg getrandom_backend="wasm_js"`, set per-target
# in .cargo/config.toml. jiff's `js` feature routes Zoned::now / tz through JS clocks.
[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.3", features = ["wasm_js"] }
getrandom04 = { package = "getrandom", version = "0.4", features = ["wasm_js"] }
# uuid refuses to guess a randomness source on wasm: point it at the getrandom 0.4
# whose JS backend the renamed entry above turns on.
uuid = { version = "1", features = ["rng-getrandom"] }
jiff = { version = "0.2", features = ["js"] }

[dev-dependencies]
# Self-signed certs for the local rustls server in the TLS tests. `ring` backend to
# match the runtime and avoid a C toolchain dependency.
rcgen = { version = "0.13", default-features = false, features = ["pem", "ring"] }
# Also a dev-dependency so the `tls_socket` integration test (a separate crate) can use
# the rustls re-export to stand up a local TLS echo server. Cargo unifies this with the
# normal dependency above — no extra build.
futures-rustls = { version = "0.26", default-features = false, features = ["ring", "tls12"] }

