[package]
name = "decl-migrate"
version = "0.0.0"
edition = "2021"
publish = false

# THROWAWAY one-off tool (detached from the quoin workspace): rewrites `.qn`
# source to add `var` at the first binding of each local per scope, migrating
# off the retired "first-assignment-declares" rule. Not part of `qn`.
[workspace]

[dependencies]
quoin-syntax = { path = "../quoin-syntax" }

[[bin]]
name = "decl-migrate"
path = "src/main.rs"
