[package]
name = "quoin-ext"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Extension-side SDK for writing out-of-process Quoin extensions (Tier 1, UDS transport)."

[dependencies]
quoin-ext-proto = { path = "../quoin-ext-proto" }

[lib]
