[package]
name = "quoin-ext"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Extension-side SDK for writing out-of-process Quoin extensions (Tier 1, UDS transport)."
readme = "README.md"

[dependencies]
# The path keeps in-tree builds on the local crate; the version is what crates.io
# consumers resolve (cargo strips the path at publish).
quoin-ext-proto = { path = "../quoin-ext-proto", version = "0.1.1" }

[dev-dependencies]
# Integration tests speak the raw wire protocol to a served extension (they play host).
quoin-ext-proto = { path = "../quoin-ext-proto" }

[lib]
