[package]
name = "quoin-fmt"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Opinionated, zero-config formatter for Quoin source code."

[dependencies]
# Parser, AST, and source spans. No `gc` feature — the formatter is pure tooling and
# never links gc-arena.
quoin-syntax = { path = "../quoin-syntax" }
