[package]
name = "quoin-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Browser (wasm32) bindings for the Quoin VM — the quoinlang.dev playground engine."
# Not a crates.io artifact: it ships as a wasm bundle on the website.
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
quoin = { path = "../..", default-features = false }
quoin-fmt = { path = "../quoin-fmt" }
wasm-bindgen = "0.2"
js-sys = "0.3"
serde_json = "1"
# Panics become console.error stack traces instead of a bare "unreachable" trap.
console_error_panic_hook = "0.1"
