[package]
name = "no_gc_across_yield"
version.workspace = true
description = "Flags `'gc` values held live across a fiber yield point"
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
clippy_utils = { git = "https://github.com/rust-lang/rust-clippy", rev = "f6d310692116e9a527ce6d0b3526c965d9c5d7b9" }
dylint_linting = "6.0.1"

[dev-dependencies]
dylint_testing = "6.0.1"

[package.metadata.rust-analyzer]
rustc_private = true
